--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -5,6 +5,7 @@ permalink: /portfolio/
 author_profile: true
 ---
 
+For more details about my other projects such as various GNN codes,Mamba codes, please see my github.  
 {% include base_path %}
 
 
